--- a/static/css/light.css
+++ b/static/css/light.css
@@ -204,6 +204,7 @@ ul { padding-left: 0; }
 {
   display: block;
   margin: auto;
+  max-width: 95%;
 }
 
 .footer {
